<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <TextView
        android:id="@+id/tv_title_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="16dp"
        android:text="@string/register_title"
        android:textStyle="bold"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/name"
        app:layout_constraintTop_toBottomOf="@id/tv_title_register"
        app:layout_constraintStart_toStartOf="@id/name_edit_text_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_edit_text_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@id/tv_title_register"
        app:layout_constraintStart_toStartOf="@id/tv_title_register"
        app:layout_constraintTop_toBottomOf="@id/tv_name_register"
        app:startIconDrawable="@drawable/ic_person_black_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_email_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="@id/name_edit_text_layout"
        app:layout_constraintTop_toBottomOf="@id/name_edit_text_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_edit_text_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@id/name_edit_text_layout"
        app:layout_constraintStart_toStartOf="@id/name_edit_text_layout"
        app:layout_constraintTop_toBottomOf="@id/tv_email_register"
        app:startIconDrawable="@drawable/ic_email_black_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_password_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="@id/email_edit_text_layout"
        app:layout_constraintTop_toBottomOf="@id/email_edit_text_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_edit_text_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@id/email_edit_text_layout"
        app:layout_constraintStart_toStartOf="@id/email_edit_text_layout"
        app:layout_constraintTop_toBottomOf="@id/tv_password_register"
        app:startIconDrawable="@drawable/ic_lock_black_24"
        app:passwordToggleEnabled="false">

        <com.dicoding.theozu.mystoryapp.ui.PasswordEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:text="@string/register_title"
        app:layout_constraintEnd_toEndOf="@id/password_edit_text_layout"
        app:layout_constraintStart_toStartOf="@id/password_edit_text_layout"
        app:layout_constraintTop_toBottomOf="@id/password_edit_text_layout" />

    <TextView
        android:id="@+id/tv_have_account_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/have_account_question"
        app:layout_constraintEnd_toEndOf="@id/btn_register"
        app:layout_constraintStart_toStartOf="@id/btn_register"
        app:layout_constraintTop_toBottomOf="@id/btn_register" />

    <Button
        android:id="@+id/btn_to_login"
        android:layout_width="144dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/login_title"
        app:layout_constraintEnd_toEndOf="@id/tv_have_account_question"
        app:layout_constraintStart_toStartOf="@id/tv_have_account_question"
        app:layout_constraintTop_toBottomOf="@id/tv_have_account_question" />

    <ProgressBar
        android:id="@+id/progress_bar_register"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>